...
                            .clipShape(Circle())
                            .shadow(color: settingsViewModel.accentColor.color, radius: 5)
                            .scaleEffect(isTapped ? 1.3 : 1.0) // Scale up
                            .opacity(isTapped ? 0.5 : 1.0) // Fade
                    }
                    .padding()
                    .accessibilityLabel("Add Task")
                    .accessibilityHint("Tap to create a new task")
                }
                .simultaneousGesture(
                    DragGesture()
                        .onChanged { value in
                            progressViewModel.dragOffsetCalculationOnGestureChange(value: value)
...
